@@ -1001,6 +1001,10 @@
  * with 'char*' for the 3rd parameter instead of 'const char*' */
 #undef HAVE_BROKEN_VSNPRINTF_DECL
 
+/* Define if you have a _broken_ vsscanf() declaration in the header,
+ * with 'char*' for the 1st parameter instead of 'const char*' */
+#undef HAVE_BROKEN_VSSCANF_DECL
+
 /* Define if you have vsscanf() */
 #undef HAVE_VSSCANF
 
